[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-circuitpython"
version = "0.1.0a1"
description = "CircuitPython-compatible stdlib layer for PyMCU (digitalio, analogio, busio, pwmio, neopixel, alarm, supervisor, time, microcontroller, board)"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_circuitpython"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
