[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymcu-circuitpython"
version = "0.1.0a1"
description = "CircuitPython-compatible stdlib layer for PyMCU (digitalio, analogio, busio, pwmio, neopixel, alarm, supervisor, time, microcontroller, board)"
requires-python = ">=3.11"
# The compat modules import pymcu.types / pymcu.hal (e.g. `warning`, `uint8`)
# at import time, so pymcu-stdlib is a hard runtime dependency. The compiler
# driver and backend are supplied by the project template (`pymcu new` ->
# pymcu-compiler[avr]); this layer stays backend-agnostic.
dependencies = ["pymcu-stdlib>=0.1.0a1"]

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_circuitpython"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
