[project]
name = "blink"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "whipsnake-stdlib>=0.1.2a8",
    "whipsnake>=0.1.0a31",
    "whipsnake-circuitpython>=0.1.0a1",
]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
whipsnake-stdlib = {index = "gitea"}
whipsnake = {index = "gitea"}
whipsnake-circuitpython = {index = "gitea"}

[tool.whip]
board     = "arduino_uno"
frequency = 16000000
sources   = "src"
entry     = "main.py"
stdlib    = ["circuitpython"]

[tool.whip.flash]
programmer = "avrdude"
port       = "/dev/cu.usbmodem14101"
