[project]
name = "blink"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pymcu-stdlib>=0.1.2a8",
    "pymcu>=0.1.0a31",
    "pymcu-circuitpython>=0.1.0a1",
]

[[tool.uv.index]]
name = "gitea"
url = "https://gitea.begeistert.dev/api/packages/begeistert/pypi/simple"
explicit = true

[tool.uv.sources]
pymcu-stdlib = {index = "gitea"}
pymcu = {index = "gitea"}
pymcu-circuitpython = {index = "gitea"}

[tool.whip]
board     = "arduino_uno"
frequency = 16000000
sources   = "src"
entry     = "main.py"
stdlib    = ["circuitpython"]

[tool.whip.flash]
programmer = "avrdude"
port       = "/dev/cu.usbmodem14101"
