[project]
name = "morse-blinker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "whipsnake-stdlib>=0.1.2a5",
    "whipsnake>=0.1.0a27",
    "whipsnake-circuitpython>=0.1.0",
]

[tool.whip]
board     = "arduino_uno"
frequency = 16000000
sources   = "src"
entry     = "main.py"
stdlib    = ["circuitpython"]

[tool.whip.flash]
programmer = "avrdude"
port       = "/dev/cu.usbmodem14101"
